Java 8 & Locale fix